# Azure_Local_Physical_Network_Config_Tool

./: .gitignore  CONTRIBUTING.md  IMPLEMENTATION_COMPLETE.md  INTEGRATION_TESTING.md  README.md  S45R15.csv  S45R15.json  SUPPORT.md  package-lock.json  package.json  playwright.config.ts  pyinstaller_entry.py
.devcontainer/: Dockerfile  devcontainer.json
.github/: AI_AGENT_REVIEW_FRAMEWORK.md  copilot-instructions.md  project_design_instruct.md
backend/: README.md  pyproject.toml
backend/schema/: standard.json
backend/src/: api.py  cli.py  context.py  metadata_validator.py  renderer.py  submission_processor.py  transformer.py  validator.py
backend/templates/cisco/nxos/: bgp.j2  full_config.j2  interface.j2  port_channel.j2  prefix_list.j2  qos.j2  static_route.j2  system.j2  vlan.j2  vpc.j2
backend/templates/dellemc/os10/: bgp.j2  full_config.j2  interface.j2  mlag.j2  port_channel.j2  prefix_list.j2  qos.j2  static_route.j2  system.j2  vlan.j2
backend/tests/: test_api.py  test_cli.py  test_config_sectioner.py  test_metadata_validator.py  test_renderer.py  test_submission_processor.py  test_transformer.py  test_validator.py  test_vendor_detector.py
backend/tests/fixtures/: rr1n25r20-hc40-definition.json  s46-r21-93180hl-24-1a.config
backend/tests/fixtures/cisco-nxos/: sample-switchless.json
backend/tests/fixtures/rr1-n25-r20-3248bmc-23-1/: std_rr1-n25-r20-3248bmc-23-1.json
docs/: CONVERTOR_GUIDE.md  TEMPLATE_GUIDE.md  TROUBLESHOOTING.md
frontend/: app.js  index.html  index.html.v1-reference  odin-theme.css  package-lock.json  package.json  (+5 more)
(+199 files in other folders)
